fix: permissions and build
